--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,10 +23,10 @@
                             id="navbarsExample05" style>
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Hem</a>
+                                    <a class="nav-link active" aria-current="page" routerLink="/home">Hem</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Hur det funkar</a>
+                                    <a class="nav-link" routerlink="about">Hur det funkar</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">Fördelar</a>
@@ -35,7 +35,7 @@
                                     <a class="nav-link">Biluppgifter</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link">Om oss</a>
+                                    <a class="nav-link" routerLink="/about">Om oss</a>
                                 </li>
                             </ul>
                         </div>
