--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid">
+<section class="container-fluid contact1 pb-5">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center mt-5 pt-5">
@@ -8,23 +8,43 @@
 
         </div>
 
-        <div class="row contatc-secbox">
-            <div class="col-md-3 shadow text-center p-4">
-               <img src="../../assets/images/contact/map.png">
-               <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+        <div class="row contatc-secbox mt-5 mb-5">
+            <div class="col-lg-3 col-md-6">
+                <div class="shadow text-center p-4 pb-3 rounded h-100">
+                    <img src="../../assets/images/contact/map.png" class="mb-4 mt-4">
+                    <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+                </div>
+              
             </div>
-            <div class="col-md-3">
-                <img src="../../assets/images/contact/envl.png">
-                <p><a href="mailto: hej@skrotobil.se">hej@skrotobil.se</a></p>
+            <div class="col-lg-3 col-md-6">
+                <div class="shadow text-center p-4 pb-3 rounded h-100">
+                    <img src="../../assets/images/contact/envl.png" class="mb-4 mt-4">
+                    <p><a href="mailto: hej@skrotobil.se">hej@skrotobil.se</a></p>
+                </div>
              </div>
-             <div class="col-md-3">
-                <img src="../../assets/images/contact/tel.png">
-                <p><a href="tel:+467071112223">+467071112223</a></p>
+             <div class="col-lg-3 col-md-6">
+                <div class="shadow text-center p-4 pb-3 rounded h-100">
+                    <img src="../../assets/images/contact/tel.png" class="mb-4 mt-4">
+                  <p><a href="tel:+467071112223">+467071112223</a></p>
+                </div>
+                
              </div>
-             <div class="col-md-3">
-                <img src="../../assets/images/contact/site.png">
-                <p><a href="www.skrotobil.se" target="_blank">www.skrotobil.se</a></p>
+             <div class="col-lg-3 col-md-6">
+                <div class="shadow text-center p-4 pb-3 rounded h-100">
+                    <img src="../../assets/images/contact/site.png" class="mb-4 mt-4">
+                     <p><a href="www.skrotobil.se" target="_blank">www.skrotobil.se</a></p>
+                </div>
              </div>
+
+             <div class="col-12 mt-5 pt-4 text-center contact-socila">
+                <ul class="social-network social-circle mt-4">
+                    <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-youtube-play"></i></a></li>
+                    <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                </ul>
+             </div>
+
         </div>
 
 
