--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,19 +23,19 @@
                             id="navbarsExample05" style>
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" routerLink="/home">Hem</a>
+                                    <a class="nav-link" routerLinkActive="active"  routerLink="/home">Hem</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerlink="about">Hur det funkar</a>
+                                    <a class="nav-link" routerLinkActive="active">Hur det funkar</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link">Fördelar</a>
+                                    <a class="nav-link" routerLinkActive="active">Fördelar</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link">Biluppgifter</a>
+                                    <a class="nav-link" routerLinkActive="active">Biluppgifter</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLink="/about">Om oss</a>
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/about">Om oss</a>
                                 </li>
                             </ul>
                         </div>
