--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -184,19 +184,19 @@
 
         <div class="col-md-6">
           <label class="form-label">Namn</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control"/>
         </div>
         <div class="col-md-6">
           <label class="form-label">Telefon</label>
-          <input type="text" class="form-control"  placeholder="Efternamn" />
+          <input type="text" class="form-control"/>
         </div>
         <div class="col-md-12">
           <label class="form-label">Amne</label>
-          <input type="email" class="form-control"  placeholder="E-post" />
+          <input type="email" class="form-control"/>
         </div>
         <div class="col-md-12">
           <label class="form-label">Meddelande</label>
-          <textarea class="form-control mb-4"  rows="3" placeholder="Övrig information"></textarea>
+          <textarea class="form-control mb-4"  rows="3"></textarea>
         </div>
         
         <div class="col-12">
