--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -19,8 +19,19 @@ header.man-header {
 .nav-link {
     font-family: 'Proxima Soft';
     font-size: 14px;
-line-height: 14px;
+    line-height: 14px;
 }
 .man-header li.nav-item {
     margin-left: 15px;
+}
+
+.mobile-menu .nav-link {
+    font-size: 16px;
+    line-height: 1.6;
+}
+.mobile-menu li.list-group-item {
+    padding: 11px 0;
+}
+.mobile-menu .offcanvas-header {
+    background: #ddecdd;
 }
