--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -51,3 +51,44 @@
     </div>
 
 </section>
+
+<section class="home-section3 home-section5">
+    <img src="../../assets/images/contact/elips.png" class="Ellipse1img">
+  <div class="container">
+    <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="../../assets/images/contact/scp.png">
+    </div>
+    <div class="col">
+      <form class="row g-3">
+
+        <div class="col-12 fomrtitle">
+          <h3>Skicka meddelande</h3>
+        </div>
+
+        <div class="col-md-6">
+          <label class="form-label">Namn</label>
+          <input type="text" class="form-control"/>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Telefon</label>
+          <input type="text" class="form-control"/>
+        </div>
+        <div class="col-md-12">
+          <label class="form-label">Amne</label>
+          <input type="email" class="form-control"/>
+        </div>
+        <div class="col-md-12">
+          <label class="form-label">Meddelande</label>
+          <textarea class="form-control mb-4"  rows="3"></textarea>
+        </div>
+        
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Skicka</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  </div>
+  
+</section>
