--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -196,3 +196,27 @@ section.home-section3.home-section5 {
     z-index: -1;
     left: -54px;
 }
+
+// Responsive css
+
+@media(max-width: 1200px){
+    img.banerrightimg{
+        max-width: 50%;
+    }
+    .banner-sec h2 {
+        font-size: 36px;
+        line-height: 1.1;
+    }
+    .banner-sec p {
+        font-size: 18px;
+        line-height: 1.3;
+    }
+    .banner-sec {
+        padding-top: 12px;
+        padding-bottom: 50px;
+    }
+    .banner-sec h2 span:after {
+        height: 20px;
+    }
+
+}
