--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,46 @@
 
-<header class="man-header">
+<header class="man-header ps-3 pe-3">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" routerLink="/home">
                     <img src="../../../assets/logo.png"> </a>
                 </div>
             <div class="col-md-7">
-                <nav class="navbar navbar-expand-lg"
+
+                <div class="d-lg-none mobile-menu">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" 
+                    aria-controls="offcanvasWithBothOptions"> menu</button>
+
+                    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+                       <div class="offcanvas-header">
+                         <h4 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Menu</h4>
+                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                       </div>
+                       <div class="offcanvas-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <a class="nav-link" routerLinkActive="active"  routerLink="/home">Hem</a>
+                                </li>
+                                <li class="list-group-item">
+                                    <a class="nav-link" routerLinkActive="active">Hur det funkar</a>
+                                </li>
+                                <li class="list-group-item">
+                                    <a class="nav-link" routerLinkActive="active">Fördelar</a>
+                                </li>
+                                <li class="list-group-item">
+                                    <a class="nav-link" routerLinkActive="active">Biluppgifter</a>
+                                </li>
+                                <li class="list-group-item">
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/about">Om oss</a>
+                                </li>
+                            </ul>
+                       </div>
+                     </div>
+                </div>
+            
+
+                <nav class="navbar navbar-expand-lg d-none d-lg-block"
                     aria-label="Fifth navbar example">
                     <div class="container-fluid">
 
@@ -43,8 +76,8 @@
                     </div>
                 </nav>
             </div>
-            <div class="col navbuton">
-                <a href="#"><button class="btn btn-primary">Kontakt Oss</button></a> 
+            <div class="col navbuton text-end">
+                <a routerLink="contact" ><button class="btn btn-primary">Kontakt Oss</button></a> 
             </div>
         </div>
     </div>
