--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 </section>
 
 <section class="home-section2">
-  <div class="container customwidth mb-5 pb-5">
+  <div class="container customwidth mb-5 pb-xl-5">
     <div class="row sec2title">
       <div class="col"><h3>Endast dessa enkla steg!</h3></div>
     </div>
@@ -58,7 +58,7 @@
 
   <div class="container home-section2inner2 pt-5">
     <div class="row">
-      <div class="col-md-5 pt-5 ps-5">
+      <div class="col-md-5 pt-5 ps-xl-5 ps-4">
         <h3>Fördelar med att skrota din bil</h3>
         <ul>
           <li>
