--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -204,7 +204,7 @@ section.home-section3.home-section5 {
         max-width: 50%;
     }
     .banner-sec h2 {
-        font-size: 36px;
+        font-size: 39px;
         line-height: 1.1;
     }
     .banner-sec p {
@@ -218,5 +218,28 @@ section.home-section3.home-section5 {
     .banner-sec h2 span:after {
         height: 20px;
     }
+    .sec2title h3{
+        font-size: 39px;
+    }
+
+    section.home-section2 {
+        padding-top: 70px;
+        padding-bottom: 60px;
+    }
+    .sec2iner {
+        height: 100%;
+        min-height: auto;
+    }
+    .sec2iner p {
+        font-size: 16px;
+        line-height: 1.5;
+    }
+    .sec2iner img {
+        max-height: 140px;
+    }
+    .home-section2inner2 h3 {
+        font-size: 39px;
+    }
+
 
 }
