--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
     <img src="../../assets/images/aboutimg/baner.png" class="banerrightimg" />
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 pe-4">
+        <div class="col-xl-4 col-lg-5 col-md-6  pe-4">
           <h2>Om oss</h2>
           <p>
             Vi vill hjälpa dig att få ersättning för din bil, skona miljön och hjälpa bilskrothandlare att
@@ -15,14 +15,14 @@
     </div>
   </section>
 
-  <section class="aboutsec2 pt-4 pb-5 mb-5">
-    <div class="container my-5">
-        <div class="row">
-          <div class="col-md-7">
+  <section class="aboutsec2 pt-4 pb-5 mb-xl-5">
+    <div class="container my-xl-5">
+        <div class="row align-items-center">
+          <div class="col-lg-7">
             <img class="" src="../../assets/images/aboutimg/sec2.png" />
           </div>
-          <div class="col-md-5">
-            <div class="ps-5 mt-4">
+          <div class="col-lg-5 ">
+            <div class="ps-xl-5 mt-4">
                 <h3 class="sectitle mb-4">Fördöma Nju at<br>
                     tn berömma smärta</h3>
                 <p>Men jag måste förklara för dig hur all denna felaktiga idé om att fördöma njutning och berömma smärta 
@@ -38,10 +38,10 @@
   <img src="../../assets/images/aboutimg/tpbod.png" class="w-100">
   <section class="aboutsec3 pt-0 pb-5">
     <div class="container">
-        <div class="row">
-         <div class="col-12 mb-5 pb-5"><h2>Rationellt Möter</h2></div>
-          <div class="col-md-5 ps-5">
-            <div class="pe-5 ps-5">
+        <div class="row align-items-center">
+         <div class="col-12 mb-xl-5 pb-md-5 pb-4"><h2>Rationellt Möter</h2></div>
+          <div class="col-lg-5 ps-xl-5">
+            <div class="pe-xl-5 ps-xl-5 ps-lg-3">
                 <h3 class="sectitle mb-4">De faktiska lärorna</h3>
                 <p>Jag måste förklara för dig hur all denna felaktiga idé om att fördöma njutning och berömma smärta föddes och jag kommer 
                     att ge dig en fullständig redogörelse för systemet och förklara de faktiska lärorna från den store.</p>
@@ -49,7 +49,7 @@
                     inte vet hur man ska sträva efter njutning rationellt möter konsekven.</p>
               </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-lg-7 mt-4 mt-md-0">
             <img class="" src="../../assets/images/aboutimg/sec3.png" />
           </div>
 
@@ -58,18 +58,18 @@
   </section>
   <img src="../../assets/images/aboutimg/btbod.png" class="w-100">
 
-  <section class="aboutsec4 pt-5 mt-5 pb-5 mb-5">
-    <div class="container mb-5">
+  <section class="aboutsec4 pt-5 mt-xl-5 pb-5 mb-xl-5">
+    <div class="container mb-md-5">
         <div class="row align-items-center">
-          <div class="col-md-5 ps-1">
-            <div class="pe-4 ps-4">
-                <h3 class="sectitle mb-4 me-5 pe-3">Med vår tjänst kan du planera din skrotning av din bil!</h3>
+          <div class="col-xl-5 col-lg-6 ps-lg-1">
+            <div class="pe-lg-4 ps-lg-4">
+                <h3 class="sectitle mb-4 me-lg-5 pe-lg-3">Med vår tjänst kan du planera din skrotning av din bil!</h3>
                 <p>All denna felaktiga idé om att fördöma njutning och berömma smärta föddes och jag kommer att ge dig en fullständig redogörelse för systemet och förklara de faktiska
                      lärorna från den store upptäcktsresanden av sanningen, mästaren-byggaren av människan lycka.</p>
 
               </div>
           </div>
-          <div class="col-md-7 text-end">
+          <div class="col-xl-7 col-lg-6 text-end">
             <img class="" src="../../assets/images/aboutimg/sec4.png" />
           </div>
 
