--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,42 +1,42 @@
 <section class="container-fluid contact1 pb-5">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center mt-5 pt-5">
+            <div class="col-md-12 text-center mt-lg-5 pt-5">
                 <h2>Kontakta oss</h2>
                 <p>Vänligen ta kontakt om du har någon fråga eller fundering!</p>
             </div>
 
         </div>
 
-        <div class="row contatc-secbox mt-5 mb-5">
-            <div class="col-lg-3 col-md-6">
+        <div class="row contatc-secbox mt-5 mb-lg-5">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <div class="shadow text-center p-4 pb-3 rounded h-100">
                     <img src="../../assets/images/contact/map.png" class="mb-4 mt-4">
                     <p>198 West 21th Street, Suite 721 New York NY 10016</p>
                 </div>
               
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <div class="shadow text-center p-4 pb-3 rounded h-100">
                     <img src="../../assets/images/contact/envl.png" class="mb-4 mt-4">
                     <p><a href="mailto: hej@skrotobil.se">hej@skrotobil.se</a></p>
                 </div>
              </div>
-             <div class="col-lg-3 col-md-6">
+             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <div class="shadow text-center p-4 pb-3 rounded h-100">
                     <img src="../../assets/images/contact/tel.png" class="mb-4 mt-4">
                   <p><a href="tel:+467071112223">+467071112223</a></p>
                 </div>
                 
              </div>
-             <div class="col-lg-3 col-md-6">
+             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                 <div class="shadow text-center p-4 pb-3 rounded h-100">
                     <img src="../../assets/images/contact/site.png" class="mb-4 mt-4">
                      <p><a href="www.skrotobil.se" target="_blank">www.skrotobil.se</a></p>
                 </div>
              </div>
 
-             <div class="col-12 mt-5 pt-4 text-center contact-socila">
+             <div class="col-12 mt-5 pt-lg-4 text-center contact-socila">
                 <ul class="social-network social-circle mt-4">
                     <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-youtube-play"></i></a></li>
                     <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
@@ -56,7 +56,7 @@
     <img src="../../assets/images/contact/elips.png" class="Ellipse1img">
   <div class="container">
     <div class="row align-items-center">
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <img src="../../assets/images/contact/scp.png">
     </div>
     <div class="col">
