--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="footerman">
     <div class="container">
         <div class="row footertoprow">
-            <div class="col-md-6">
-                <div class="col-sm-9">
+            <div class="col-lg-6 text-lg-start">
+                <div class="col-lg-9 col-12 pb-5 pb-lg-0">
                     <a href="#" class="mb-4 logofoo"> <img src="../../../assets/images/footerlogo.png"> </a> 
                     <p>Tillsammans med bilskrothandlaren kommer ni överens angående datum, tid och hur ersättningen 
                         för ditt bil ska betalas. Dessutom skriv under det gula delen så</p>
@@ -15,8 +15,8 @@
                 </div>
                 
             </div>
-            <div class="col-md-3">
-                <ul class="footermenu mx-auto">
+            <div class="col-lg-3 col-md-6 pb-5 pb-lg-0">
+                <ul class="footermenu mx-lg-auto pt-lg-0 pb-lg-0 p-md-4">
                     <li>
                         <a href="#">Hem</a>
                     </li>
@@ -37,8 +37,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-3">
-                <div class="mx-auto ps-5 Kontakta">
+            <div class="col-lg-3 col-md-6">
+                <div class="mx-auto  pt-lg-0 pb-lg-0 ps-xl-5 ps-lg-4 p-md-4  Kontakta">
                     <h4>Kontakta oss</h4>
                     <ul>
                         <li>
@@ -70,15 +70,15 @@
     <div class="container-fluid footercopy">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-xl-9 col-lg-8 pb-4 pb-lg-0 text-center text-lg-start">
                     <p>©2023 devopsninja - All Rights Reserved.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xl-3 col">
                     <ul class="row">
-                        <li class="col-sm-6">
+                        <li class="col-sm-6 col text-end text-lg-start">
                           <a href="#">Privacy policy</a>
                         </li>
-                        <li class="col-sm-6">
+                        <li class="col-sm-6 col">
                             <a href="#">Terms & Condition</a>
                         </li>
                     </ul>
