--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <img src="../../assets/images/bannerbg.png" class="banerrightimg" />
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 pe-5">
+      <div class="col-sm-6 pe-md-5">
         <h2>
           Det ska vara<br />
           <span>enkelt att skrota din bil!</span>
@@ -24,7 +24,7 @@
       <div class="col"><h3>Endast dessa enkla steg!</h3></div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="sec2iner">
           <img src="../../assets/images/car.png" class="img-fluid" />
           <p>
@@ -33,7 +33,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="sec2iner">
           <img src="../../assets/images/person.png" class="img-fluid" />
           <p>
@@ -43,7 +43,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="sec2iner">
           <img src="../../assets/images/images2.png" class="img-fluid" />
           <p>
@@ -56,9 +56,9 @@
     </div>
   </div>
 
-  <div class="container home-section2inner2 pt-5">
+  <div class="container home-section2inner2 pt-xl-5 pt-2">
     <div class="row">
-      <div class="col-md-5 pt-5 ps-xl-5 ps-4">
+      <div class="col-lg-5 col-auto mx-auto pt-xl-5 ps-xl-5 ps-xl-4">
         <h3>Fördelar med att skrota din bil</h3>
         <ul>
           <li>
@@ -75,7 +75,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-7">
+      <div class="col-lg-7">
         <img src="../../assets/images/car2.png" />
       </div>
     </div>
@@ -90,7 +90,7 @@
     <div class="col-md-6">
       <img src="../../assets/images/car3.png">
     </div>
-    <div class="col">
+    <div class="col m-2 m-xl-0">
       <form class="row g-3">
 
         <div class="col-12 fomrtitle">
@@ -153,7 +153,7 @@
 <section class="home-section4">
   <div class="container">
     <div class="row align-items-center">
-    <div class="col pe-5 ps-5">
+    <div class="col pe-md-5 ps-md-5">
       <h3>Om oss</h3>
       <p>Vi vill hjälpa dig att få ersättning för din bil, skona miljön och hjälpa bilskrothandlare att utöka deras 
         verksamhet genom att skrota flera bilar. </p>
@@ -175,7 +175,7 @@
     <div class="col-md-6">
       <img src="../../assets/images/car5.png">
     </div>
-    <div class="col">
+    <div class="col m-3 mt-5 m-lg-0">
       <form class="row g-3">
 
         <div class="col-12 fomrtitle">
