--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,15 +2,15 @@
 <header class="man-header ps-3 pe-3">
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 col-6">
                 <a class="navbar-brand" routerLink="/home">
                     <img src="../../../assets/logo.png"> </a>
                 </div>
-            <div class="col-md-7">
+            <div class="col-lg col">
 
-                <div class="d-lg-none mobile-menu">
-                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" 
-                    aria-controls="offcanvasWithBothOptions"> menu</button>
+                <div class="d-lg-none mobile-menu text-end">
+                    <button class="moblbtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" 
+                    aria-controls="offcanvasWithBothOptions"> <i class="fa fa-bars" aria-hidden="true"></i></button>
 
                     <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                        <div class="offcanvas-header">
@@ -18,7 +18,7 @@
                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                        </div>
                        <div class="offcanvas-body">
-                            <ul class="list-group list-group-flush">
+                            <ul class="list-group list-group-flush text-start">
                                 <li class="list-group-item">
                                     <a class="nav-link" routerLinkActive="active"  routerLink="/home">Hem</a>
                                 </li>
@@ -76,7 +76,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="col navbuton text-end">
+            <div class="col-auto navbuton text-end d-none d-md-block">
                 <a routerLink="contact" ><button class="btn btn-primary">Kontakt Oss</button></a> 
             </div>
         </div>
