--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -2,7 +2,7 @@
     <img src="../../assets/images/service/baner.png" class="banerrightimg" />
     <div class="container">
       <div class="row">
-        <div class="col-sm-5 pe-4">
+        <div class="col-xl-5 pe-4">
           <h2>Välj dina<br> bästa tjänster</h2>
           <p>
             At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
