--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -20,19 +20,16 @@
                        <div class="offcanvas-body">
                             <ul class="list-group list-group-flush text-start">
                                 <li class="list-group-item">
-                                    <a class="nav-link" routerLinkActive="active"  routerLink="/home">Hem</a>
+                                    <a class="nav-link" routerLinkActive="active" data-bs-dismiss="offcanvas" routerLink="/home">Hem</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a class="nav-link" routerLinkActive="active">Hur det funkar</a>
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/services" data-bs-dismiss="offcanvas">Våra tjänster</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a class="nav-link" routerLinkActive="active">Fördelar</a>
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/about" data-bs-dismiss="offcanvas">Om oss</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a class="nav-link" routerLinkActive="active">Biluppgifter</a>
-                                </li>
-                                <li class="list-group-item">
-                                    <a class="nav-link" routerLinkActive="active" routerLink="/about">Om oss</a>
+                                    <a class="nav-link" routerLinkActive="active" data-bs-dismiss="offcanvas" routerLink="/contact">Kontakt Oss</a>
                                 </li>
                             </ul>
                        </div>
@@ -56,19 +53,16 @@
                             id="navbarsExample05" style>
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLinkActive="active"  routerLink="/home">Hem</a>
+                                    <a class="nav-link" routerLinkActive="active"  routerLink="/">Hem</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLinkActive="active">Hur det funkar</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLinkActive="active">Fördelar</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLinkActive="active">Biluppgifter</a>
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/services">Våra tjänster</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" routerLinkActive="active" routerLink="/about">Om oss</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" routerLinkActive="active" routerLink="/contact">Kontakt Oss</a>
                                 </li>
                             </ul>
                         </div>
@@ -76,9 +70,9 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-auto navbuton text-end d-none d-md-block">
+            <!-- <div class="col-auto navbuton text-end d-none d-md-block">
                 <a routerLink="contact" ><button class="btn btn-primary">Kontakt Oss</button></a> 
-            </div>
+            </div> -->
         </div>
     </div>
 
