--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -51,8 +51,8 @@ button.moblbtn {
 
 
 @media(max-width: 767px){
-    header.man-header[_ngcontent-ng-c192600217] {
-        padding: 20px 9px 20px !important;
+    header.man-header {
+        padding: 26px 9px 20px ;
     }
 }
 
