--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -56,10 +56,10 @@
     <img src="../../assets/images/contact/elips.png" class="Ellipse1img">
   <div class="container">
     <div class="row align-items-center">
-    <div class="col-lg-6">
+    <div class="col-lg-6 mx-auto">
       <img src="../../assets/images/contact/scp.png">
     </div>
-    <div class="col">
+    <!-- <div class="col">
       <form class="row g-3">
 
         <div class="col-12 fomrtitle">
@@ -87,7 +87,8 @@
           <button type="submit" class="btn btn-primary">Skicka</button>
         </div>
       </form>
-    </div>
+    </div> -->
+
   </div>
   </div>
   
