--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
           hjälpa bilskrothandlare att utöka deras verksamhet genom att skrota
           flera bilar.
         </p>
-        <a href="#" class="btn btn-primary">Få bud för din bil!</a>
+        <a  (click)="scrollPoint1()" class="btn btn-primary">Få bud för din bil!</a>
       </div>
     </div>
   </div>
@@ -84,7 +84,7 @@
   <img src="../../assets/images/Ellipse1.png" class="sec2ellip" />
 </section>
 
-<section class="home-section3">
+<section class="home-section3" id="carform">
   <div class="container">
     <div class="row align-items-center">
     <div class="col-md-6">
@@ -106,26 +106,18 @@
           <input type="text" class="form-control"  placeholder="Efternamn" />
         </div>
         <div class="col-md-6">
-     
           <input type="email" class="form-control"  placeholder="E-post" />
         </div>
         <div class="col-md-6">
-        
           <input type="tel" class="form-control"  placeholder="Telefon" />
         </div>
         <div class="col-md-6">
           <input type="text" class="form-control"  placeholder="Bil reg. nummer" />
         </div>
         <div class="col-md-6">
-         
-          <input type="text" class="form-control"  placeholder="Motor"/>
-        </div>
-        <div class="col-md-6">
-         
           <input type="text" class="form-control"  placeholder="Orginal Katalysator"/>
         </div>
         <div class="col-md-6">
-         
           <input type="text" class="form-control"  placeholder="Gata" />
         </div>
         <div class="col-md-6">
@@ -138,65 +130,6 @@
         
         <div class="col-12">
           <textarea class="form-control mt-4 mb-4"  rows="3" placeholder="Övrig information"></textarea>
-        </div>
-        
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Skicka</button>
-        </div>
-      </form>
-    </div>
-  </div>
-  </div>
-  
-</section>
-
-<section class="home-section4">
-  <div class="container">
-    <div class="row align-items-center">
-    <div class="col pe-md-5 ps-md-5">
-      <h3>Om oss</h3>
-      <p>Vi vill hjälpa dig att få ersättning för din bil, skona miljön och hjälpa bilskrothandlare att utöka deras 
-        verksamhet genom att skrota flera bilar. </p>
-        <a href="#" class="btn btn-primary">Få bud för din bil!</a>
-    </div>
-    <div class="col-md-6">
-      <img src="../../assets/images/contact-img.png">
-    </div>
-  </div>
-  </div>
-  
-</section>
-
-
-<section class="home-section3 home-section5">
-    <img src="../../assets/images/Ellipse4.png" class="Ellipse1img">
-  <div class="container">
-    <div class="row align-items-center">
-    <div class="col-md-6">
-      <img src="../../assets/images/car5.png">
-    </div>
-    <div class="col m-3 mt-5 m-lg-0">
-      <form class="row g-3">
-
-        <div class="col-12 fomrtitle">
-          <h3>Skicka meddelande</h3>
-        </div>
-
-        <div class="col-md-6">
-          <label class="form-label">Namn</label>
-          <input type="text" class="form-control"/>
-        </div>
-        <div class="col-md-6">
-          <label class="form-label">Telefon</label>
-          <input type="text" class="form-control"/>
-        </div>
-        <div class="col-md-12">
-          <label class="form-label">Amne</label>
-          <input type="email" class="form-control"/>
-        </div>
-        <div class="col-md-12">
-          <label class="form-label">Meddelande</label>
-          <textarea class="form-control mb-4"  rows="3"></textarea>
         </div>
         
         <div class="col-12">
