--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -18,23 +18,18 @@
             <div class="col-lg-3 col-md-6 pb-5 pb-lg-0">
                 <ul class="footermenu mx-lg-auto pt-lg-0 pb-lg-0 p-md-4">
                     <li>
-                        <a href="#">Hem</a>
+                        <a routerLink="/">Hem</a>
                     </li>
                     <li>
-                        <a href="#">Hur det funkar</a>
+                        <a routerLink="/services">Våra tjänster</a>
                     </li>
                     <li>
-                        <a href="#">Fördelar</a>
+                        <a  routerLink="/about">Om oss</a>
                     </li>
                     <li>
-                        <a href="#">Biluppgifter</a>
+                        <a routerLink="/contact">Kontakt Oss</a>
                     </li>
-                     <li>
-                        <a href="#">Om oss</a>
-                    </li>
-                    <li>
-                        <a href="#">Kontakta oss</a>
-                    </li>
+                   
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6">
